RESOLVED FIXED77728
WebGestureEvent can not encode delta and area
https://bugs.webkit.org/show_bug.cgi?id=77728
Summary WebGestureEvent can not encode delta and area
Allan Sandfeld Jensen
Reported 2012-02-03 04:26:05 PST
Scroll-gestures needs a delta field for movement, and Tap-gestures need an area for the touch point. Neither are currently encoded in WebGestureEvent, and WebCore::PlatformGestureEvent lacks area.
Attachments
Patch (14.08 KB, patch)
2012-02-03 04:34 PST, Allan Sandfeld Jensen
no flags
Patch (7.88 KB, patch)
2012-02-06 04:20 PST, Allan Sandfeld Jensen
kenneth: review+
Patch for landing (7.51 KB, patch)
2012-02-06 05:15 PST, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-02-03 04:34:20 PST
WebKit Review Bot
Comment 2 2012-02-03 04:56:14 PST
Comment on attachment 125306 [details] Patch Attachment 125306 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11423230
Allan Sandfeld Jensen
Comment 3 2012-02-06 04:20:00 PST
Kenneth Rohde Christiansen
Comment 4 2012-02-06 05:06:35 PST
Comment on attachment 125613 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=125613&action=review > Source/WebCore/ChangeLog:4 > + Add area field to PlatformGestureEvent. > + https://bugs.webkit.org/show_bug.cgi?id=77728 You need to keep this the exact as the bug title > Source/WebKit2/ChangeLog:4 > + Support delta and area fields in WebGestureEvent, and send area with Qt tap gesture. > + https://bugs.webkit.org/show_bug.cgi?id=77728 Here it is different
Allan Sandfeld Jensen
Comment 5 2012-02-06 05:15:33 PST
Created attachment 125621 [details] Patch for landing Use bug title in ChangeLog.
WebKit Review Bot
Comment 6 2012-02-06 06:07:43 PST
Comment on attachment 125621 [details] Patch for landing Clearing flags on attachment: 125621 Committed r106803: <http://trac.webkit.org/changeset/106803>
WebKit Review Bot
Comment 7 2012-02-06 06:07:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.