WebGestureEvent can not encode delta and area. https://bugs.webkit.org/show_bug.cgi?id=77728

Source/WebCore:

Add area field to PlatformGestureEvent.

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-02-06
Reviewed by Kenneth Rohde Christiansen.

* platform/PlatformGestureEvent.h:
(WebCore::PlatformGestureEvent::PlatformGestureEvent):
(WebCore::PlatformGestureEvent::area):

Source/WebKit2:

Support delta and area fields in WebGestureEvent, and send area with Qt tap gesture.

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-02-06
Reviewed by Kenneth Rohde Christiansen.

* Shared/WebEvent.h:
(WebKit::WebGestureEvent::area):
(WebKit::WebGestureEvent::delta):
* Shared/WebEventConversion.cpp:
(WebKit::WebKit2PlatformGestureEvent::WebKit2PlatformGestureEvent):
* Shared/WebGestureEvent.cpp:
(WebKit::WebGestureEvent::WebGestureEvent):
(WebKit::WebGestureEvent::encode):
(WebKit::WebGestureEvent::decode):
* UIProcess/qt/QtWebPageEventHandler.cpp:
(QtWebPageEventHandler::handleSingleTapEvent):

Canonical link: https://commits.webkit.org/94737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106803 268f45cc-cd09-0410-ab3c-d52691b4dbfc