Source/WebKit2/Shared/WebEventConversion.cpp
@@ -232,6 +232,10 @@ public:
         // PlatformGestureEvent
         m_position = webEvent.position();
         m_globalPosition = webEvent.globalPosition();
+
+        m_area = webEvent.area();
+        m_deltaX = webEvent.delta().x();
+        m_deltaY = webEvent.delta().y();
     }
 };
 
